--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/carousel/">
 
     <!-- Bootstrap core CSS -->
-<link href="localu/assets/dist/css/bootstrap.css" rel="stylesheet">
+<link href="asset/bootstrap.css" rel="stylesheet">
 
     <style>
       .bd-placeholder-img {
@@ -30,7 +30,7 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="localu/carousel.css" rel="stylesheet">
+    <link href="carousel.css" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -161,6 +161,6 @@
   </footer>
 </main>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-      <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="localu/assets/dist/js/bootstrap.bundle.js"></script></body>
+      <script>window.jQuery || document.write('<script src="asset/jquery.slim.min.js"><\/script>')</script><script src="asset/bootstrap.bundle.js"></script></body>
 </body>
 </html>
