--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <a class="nav-link" href="#">Report</a>
         </li>
         <li class="nav-item">
-          <a class="btn btn-outline-primary" href="C:\Users\dell\Desktop\local\sign-in\index.html">Sign up</a>
+          <a class="btn btn-outline-primary" href="signin.html">Sign up</a>
         </li>
       </ul>
       <form class="form-inline mt-2 mt-md-0">
