--- a/profile.html
+++ b/profile.html
@@ -84,7 +84,7 @@ button:hover, a:hover {
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="#">Profile</a>
@@ -100,7 +100,7 @@ button:hover, a:hover {
           <a class="nav-link" href="#">Report</a>
         </li>
         <li class="nav-item">
-          <a class="btn btn-outline-primary" href="C:\Users\dell\Desktop\local\sign-in\index.html">Sign up</a>
+          <a class="btn btn-outline-primary" href="login.html">Sign up</a>
         </li>
       </ul>
       <form class="form-inline mt-2 mt-md-0">
